<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    tools:context=".AnasayfaActivity">

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imgHeight"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/depologo" />


    <TextView
        android:id="@+id/lblHosgeldin"
        style="@style/baslik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:gravity="center_horizontal"
        android:text="@string/activity_anasayfa_title"
        android:textSize="@dimen/baslikTextSize" />

    <TextView
        android:id="@+id/lblEposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text=""
        android:textSize="@dimen/altBaslikTextSize" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txtTumUrunlerHeight"
        android:layout_marginBottom="@dimen/marginBottom"
        android:gravity="center"
        android:text="@string/activity_anasayfa_tumIslemler"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/tumIslemler"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDepoEkle"
            android:layout_width="@dimen/AnasayfaButton"
            android:layout_height="@dimen/AnasayfaButton"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/activity_anasayfa_btnDepoEkle"
            app:cornerRadius="@dimen/cornerRadius" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDepolar"
            android:layout_width="@dimen/AnasayfaButton"
            android:layout_height="@dimen/AnasayfaButton"
            android:layout_toEndOf="@+id/btnDepoEkle"
            android:text="@string/activity_anasayfa_btnDepolar"
            app:cornerRadius="@dimen/cornerRadius" />


    </RelativeLayout>






</LinearLayout>